--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -24,6 +24,7 @@
   height: 48px;
   border-radius: 5px;
   font-weight: 700;
+  z-index: 2;
 }
 
 .box {
@@ -34,4 +35,27 @@
   position: absolute;
   width: 457.2px;
   height: 457.2px;
+}
+
+.projects {
+  background-color: #e5e5e5;
+  padding: 70px 115px;
+}
+
+.projects-conteiner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.projects-conteiner h1 {
+  color: var(--orange);
+  font-weight: 700;
+}
+.projects-list {
+  margin-top: 60px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  column-gap: 20px;
+  row-gap: 20px;
 }
