--- a/src/css/Card.module.css
+++ b/src/css/Card.module.css
@@ -6,12 +6,11 @@
   border-radius: 10%;
 }
 
-.card p {
-  padding: 20px;
-  font-weight: 700;
-  font-size: 24px;
-  color: #171718;
+.card:hover {
+  cursor: pointer;
 }
+
+
 .card img {
   border-radius: 10%;
 }
