--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -24,7 +24,7 @@
   height: 48px;
   border-radius: 5px;
   font-weight: 700;
-  z-index: 2;
+  z-index: 1;
 }
 
 .box {
@@ -47,7 +47,7 @@
   flex-direction: column;
   align-items: center;
 }
-.projects-conteiner h1 {
+.title {
   color: var(--orange);
   font-weight: 700;
 }
@@ -58,4 +58,11 @@
   justify-content: center;
   column-gap: 20px;
   row-gap: 20px;
+}
+
+.card_p {
+  padding: 20px;
+  font-weight: 700;
+  font-size: 24px;
+  color: #171718;
 }
